[gd_scene load_steps=11 format=3 uid="uid://cs5x453dm77q"]

[ext_resource type="Script" path="res://test/movement_prototype/scripts/move_systems/movesys_dnd_click.gd" id="1_6ig54"]
[ext_resource type="PackedScene" uid="uid://brehcf7q3asq0" path="res://test/movement_prototype/prefabs/tile.tscn" id="1_doj0g"]
[ext_resource type="Script" path="res://test/movement_prototype/scripts/move_systems/movesys_click.gd" id="1_qvmpt"]
[ext_resource type="Script" path="res://test/movement_prototype/scripts/move_systems/ms_controller.gd" id="1_wxu04"]
[ext_resource type="PackedScene" uid="uid://bjfmki4yr7wom" path="res://test/movement_prototype/prefabs/piece.tscn" id="2_if87y"]
[ext_resource type="Script" path="res://test/movement_prototype/scripts/move_systems/movesys_dnd_hold.gd" id="3_2s7tf"]
[ext_resource type="PackedScene" uid="uid://bfan4cu8dxbge" path="res://test/movement_prototype/prefabs/tile_spawn.tscn" id="5_i12y5"]
[ext_resource type="PackedScene" uid="uid://b4gwf228qgx8t" path="res://test/movement_prototype/prefabs/tile_rosette.tscn" id="7_7faun"]

[sub_resource type="BoxMesh" id="BoxMesh_pwvts"]
size = Vector3(3, 0.5, 8)

[sub_resource type="BoxMesh" id="BoxMesh_bwcnj"]
size = Vector3(1, 1, 2)

[node name="Level" type="Node3D"]

[node name="Meta" type="Node3D" parent="."]
script = ExtResource("1_wxu04")

[node name="MoveSysDDClick" type="Node3D" parent="Meta" node_paths=PackedStringArray("_tileParent")]
script = ExtResource("1_6ig54")
_tileParent = NodePath("../../Board/Tiles")

[node name="MoveSysDDHold" type="Node3D" parent="Meta" node_paths=PackedStringArray("_tileParent")]
script = ExtResource("3_2s7tf")
_tileParent = NodePath("../../Board/Tiles")

[node name="MoveSysClick" type="Node3D" parent="Meta" node_paths=PackedStringArray("_tileParent")]
script = ExtResource("1_qvmpt")
_tileParent = NodePath("../../Board/Tiles")

[node name="Board" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="Model" type="CSGMesh3D" parent="Board"]
mesh = SubResource("BoxMesh_pwvts")

[node name="SubtractShape1" type="CSGMesh3D" parent="Board/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)
operation = 2
mesh = SubResource("BoxMesh_bwcnj")

[node name="SubtractShape2" type="CSGMesh3D" parent="Board/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)
operation = 2
mesh = SubResource("BoxMesh_bwcnj")

[node name="Tiles" type="Node3D" parent="Board"]

[node name="StartTile" parent="Board/Tiles" node_paths=PackedStringArray("_pieces") instance=ExtResource("5_i12y5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.25, -0.5)
_pieces = [NodePath("../../../Pieces/Piece"), NodePath("../../../Pieces/Piece2"), NodePath("../../../Pieces/Piece3"), NodePath("../../../Pieces/Piece4"), NodePath("../../../Pieces/Piece5"), NodePath("../../../Pieces/Piece6"), NodePath("../../../Pieces/Piece7")]

[node name="Tile" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.25, 0.5)

[node name="Tile2" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.25, 1.5)

[node name="Tile3" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.25, 2.5)

[node name="Tile4_R" parent="Board/Tiles" instance=ExtResource("7_7faun")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.25, 3.5)

[node name="Tile5" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 3.5)

[node name="Tile6" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 2.5)

[node name="Tile7" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 1.5)

[node name="Tile8_R" parent="Board/Tiles" instance=ExtResource("7_7faun")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0.5)

[node name="Tile9" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -0.5)

[node name="Tile10" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -1.5)

[node name="Tile11" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -2.5)

[node name="Tile12" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -3.5)

[node name="Tile13" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.25, -3.5)

[node name="Tile14_R" parent="Board/Tiles" instance=ExtResource("7_7faun")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.25, -2.5)

[node name="Tile15_R" parent="Board/Tiles" instance=ExtResource("7_7faun")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.25, 3.5)

[node name="Tile16" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.25, 2.5)

[node name="Tile17" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.25, 1.5)

[node name="Tile18" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.25, 0.5)

[node name="Tile19_R" parent="Board/Tiles" instance=ExtResource("7_7faun")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.25, -2.5)

[node name="Tile20" parent="Board/Tiles" instance=ExtResource("1_doj0g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.25, -3.5)

[node name="EndTile" parent="Board/Tiles" instance=ExtResource("5_i12y5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.25, -1.5)

[node name="Pieces" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="Piece" parent="Pieces" instance=ExtResource("2_if87y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.15, -0.5)

[node name="Piece2" parent="Pieces" instance=ExtResource("2_if87y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -0.5)

[node name="Piece3" parent="Pieces" instance=ExtResource("2_if87y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.15, -0.5)

[node name="Piece4" parent="Pieces" instance=ExtResource("2_if87y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.3, -0.5)

[node name="Piece5" parent="Pieces" instance=ExtResource("2_if87y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.45, -0.5)

[node name="Piece6" parent="Pieces" instance=ExtResource("2_if87y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.6, -0.5)

[node name="Piece7" parent="Pieces" instance=ExtResource("2_if87y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.75, -0.5)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-3.78552e-08, -0.5, 0.866025, -2.18557e-08, 0.866025, 0.5, -1, 3.01981e-14, -4.37114e-08, 4.66976, 4, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Camera3D"]
